docs/upbound-provider-azure/1.3/network/v1beta1/trafficManagerProfile.md
---
permalink: /upbound-provider-azure/1.3/network/v1beta1/trafficManagerProfile/
---

# network.v1beta1.trafficManagerProfile

"TrafficManagerProfile is the Schema for the TrafficManagerProfiles API. Manages a Traffic Manager Profile."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withDnsConfig(dnsConfig)`](#fn-specforproviderwithdnsconfig)
    * [`fn withDnsConfigMixin(dnsConfig)`](#fn-specforproviderwithdnsconfigmixin)
    * [`fn withMaxReturn(maxReturn)`](#fn-specforproviderwithmaxreturn)
    * [`fn withMonitorConfig(monitorConfig)`](#fn-specforproviderwithmonitorconfig)
    * [`fn withMonitorConfigMixin(monitorConfig)`](#fn-specforproviderwithmonitorconfigmixin)
    * [`fn withProfileStatus(profileStatus)`](#fn-specforproviderwithprofilestatus)
    * [`fn withResourceGroupName(resourceGroupName)`](#fn-specforproviderwithresourcegroupname)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`fn withTrafficRoutingMethod(trafficRoutingMethod)`](#fn-specforproviderwithtrafficroutingmethod)
    * [`fn withTrafficViewEnabled(trafficViewEnabled)`](#fn-specforproviderwithtrafficviewenabled)
    * [`obj spec.forProvider.dnsConfig`](#obj-specforproviderdnsconfig)
      * [`fn withRelativeName(relativeName)`](#fn-specforproviderdnsconfigwithrelativename)
      * [`fn withTtl(ttl)`](#fn-specforproviderdnsconfigwithttl)
    * [`obj spec.forProvider.monitorConfig`](#obj-specforprovidermonitorconfig)
      * [`fn withCustomHeader(customHeader)`](#fn-specforprovidermonitorconfigwithcustomheader)
      * [`fn withCustomHeaderMixin(customHeader)`](#fn-specforprovidermonitorconfigwithcustomheadermixin)
      * [`fn withExpectedStatusCodeRanges(expectedStatusCodeRanges)`](#fn-specforprovidermonitorconfigwithexpectedstatuscoderanges)
      * [`fn withExpectedStatusCodeRangesMixin(expectedStatusCodeRanges)`](#fn-specforprovidermonitorconfigwithexpectedstatuscoderangesmixin)
      * [`fn withIntervalInSeconds(intervalInSeconds)`](#fn-specforprovidermonitorconfigwithintervalinseconds)
      * [`fn withPath(path)`](#fn-specforprovidermonitorconfigwithpath)
      * [`fn withPort(port)`](#fn-specforprovidermonitorconfigwithport)
      * [`fn withProtocol(protocol)`](#fn-specforprovidermonitorconfigwithprotocol)
      * [`fn withTimeoutInSeconds(timeoutInSeconds)`](#fn-specforprovidermonitorconfigwithtimeoutinseconds)
      * [`fn withToleratedNumberOfFailures(toleratedNumberOfFailures)`](#fn-specforprovidermonitorconfigwithtoleratednumberoffailures)
      * [`obj spec.forProvider.monitorConfig.customHeader`](#obj-specforprovidermonitorconfigcustomheader)
        * [`fn withName(name)`](#fn-specforprovidermonitorconfigcustomheaderwithname)
        * [`fn withValue(value)`](#fn-specforprovidermonitorconfigcustomheaderwithvalue)
    * [`obj spec.forProvider.resourceGroupNameRef`](#obj-specforproviderresourcegroupnameref)
      * [`fn withName(name)`](#fn-specforproviderresourcegroupnamerefwithname)
      * [`obj spec.forProvider.resourceGroupNameRef.policy`](#obj-specforproviderresourcegroupnamerefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnamerefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnamerefpolicywithresolve)
    * [`obj spec.forProvider.resourceGroupNameSelector`](#obj-specforproviderresourcegroupnameselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderresourcegroupnameselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderresourcegroupnameselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.resourceGroupNameSelector.policy`](#obj-specforproviderresourcegroupnameselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderresourcegroupnameselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withDnsConfig(dnsConfig)`](#fn-specinitproviderwithdnsconfig)
    * [`fn withDnsConfigMixin(dnsConfig)`](#fn-specinitproviderwithdnsconfigmixin)
    * [`fn withMaxReturn(maxReturn)`](#fn-specinitproviderwithmaxreturn)
    * [`fn withMonitorConfig(monitorConfig)`](#fn-specinitproviderwithmonitorconfig)
    * [`fn withMonitorConfigMixin(monitorConfig)`](#fn-specinitproviderwithmonitorconfigmixin)
    * [`fn withProfileStatus(profileStatus)`](#fn-specinitproviderwithprofilestatus)
    * [`fn withTags(tags)`](#fn-specinitproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specinitproviderwithtagsmixin)
    * [`fn withTrafficRoutingMethod(trafficRoutingMethod)`](#fn-specinitproviderwithtrafficroutingmethod)
    * [`fn withTrafficViewEnabled(trafficViewEnabled)`](#fn-specinitproviderwithtrafficviewenabled)
    * [`obj spec.initProvider.dnsConfig`](#obj-specinitproviderdnsconfig)
      * [`fn withRelativeName(relativeName)`](#fn-specinitproviderdnsconfigwithrelativename)
      * [`fn withTtl(ttl)`](#fn-specinitproviderdnsconfigwithttl)
    * [`obj spec.initProvider.monitorConfig`](#obj-specinitprovidermonitorconfig)
      * [`fn withCustomHeader(customHeader)`](#fn-specinitprovidermonitorconfigwithcustomheader)
      * [`fn withCustomHeaderMixin(customHeader)`](#fn-specinitprovidermonitorconfigwithcustomheadermixin)
      * [`fn withExpectedStatusCodeRanges(expectedStatusCodeRanges)`](#fn-specinitprovidermonitorconfigwithexpectedstatuscoderanges)
      * [`fn withExpectedStatusCodeRangesMixin(expectedStatusCodeRanges)`](#fn-specinitprovidermonitorconfigwithexpectedstatuscoderangesmixin)
      * [`fn withIntervalInSeconds(intervalInSeconds)`](#fn-specinitprovidermonitorconfigwithintervalinseconds)
      * [`fn withPath(path)`](#fn-specinitprovidermonitorconfigwithpath)
      * [`fn withPort(port)`](#fn-specinitprovidermonitorconfigwithport)
      * [`fn withProtocol(protocol)`](#fn-specinitprovidermonitorconfigwithprotocol)
      * [`fn withTimeoutInSeconds(timeoutInSeconds)`](#fn-specinitprovidermonitorconfigwithtimeoutinseconds)
      * [`fn withToleratedNumberOfFailures(toleratedNumberOfFailures)`](#fn-specinitprovidermonitorconfigwithtoleratednumberoffailures)
      * [`obj spec.initProvider.monitorConfig.customHeader`](#obj-specinitprovidermonitorconfigcustomheader)
        * [`fn withName(name)`](#fn-specinitprovidermonitorconfigcustomheaderwithname)
        * [`fn withValue(value)`](#fn-specinitprovidermonitorconfigcustomheaderwithvalue)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of TrafficManagerProfile

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"TrafficManagerProfileSpec defines the desired state of TrafficManagerProfile"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withDnsConfig

```ts
withDnsConfig(dnsConfig)
```

"This block specifies the DNS configuration of the Profile. One dns_config block as defined below."

### fn spec.forProvider.withDnsConfigMixin

```ts
withDnsConfigMixin(dnsConfig)
```

"This block specifies the DNS configuration of the Profile. One dns_config block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withMaxReturn

```ts
withMaxReturn(maxReturn)
```

"The amount of endpoints to return for DNS queries to this Profile. Possible values range from 1 to 8."

### fn spec.forProvider.withMonitorConfig

```ts
withMonitorConfig(monitorConfig)
```

"This block specifies the Endpoint monitoring configuration for the Profile. One monitor_config block as defined below."

### fn spec.forProvider.withMonitorConfigMixin

```ts
withMonitorConfigMixin(monitorConfig)
```

"This block specifies the Endpoint monitoring configuration for the Profile. One monitor_config block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withProfileStatus

```ts
withProfileStatus(profileStatus)
```

"The status of the profile, can be set to either Enabled or Disabled. Defaults to Enabled."

### fn spec.forProvider.withResourceGroupName

```ts
withResourceGroupName(resourceGroupName)
```

"The name of the resource group in which to create the Traffic Manager profile. Changing this forces a new resource to be created."

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"A mapping of tags to assign to the resource."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"A mapping of tags to assign to the resource."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withTrafficRoutingMethod

```ts
withTrafficRoutingMethod(trafficRoutingMethod)
```

"Specifies the algorithm used to route traffic. Possible values are Geographic, Weighted, Performance, Priority, Subnet and MultiValue."

### fn spec.forProvider.withTrafficViewEnabled

```ts
withTrafficViewEnabled(trafficViewEnabled)
```

"Indicates whether Traffic View is enabled for the Traffic Manager profile."

## obj spec.forProvider.dnsConfig

"This block specifies the DNS configuration of the Profile. One dns_config block as defined below."

### fn spec.forProvider.dnsConfig.withRelativeName

```ts
withRelativeName(relativeName)
```

"The relative domain name, this is combined with the domain name used by Traffic Manager to form the FQDN which is exported as documented below. Changing this forces a new resource to be created."

### fn spec.forProvider.dnsConfig.withTtl

```ts
withTtl(ttl)
```

"The TTL value of the Profile used by Local DNS resolvers and clients."

## obj spec.forProvider.monitorConfig

"This block specifies the Endpoint monitoring configuration for the Profile. One monitor_config block as defined below."

### fn spec.forProvider.monitorConfig.withCustomHeader

```ts
withCustomHeader(customHeader)
```

"One or more custom_header blocks as defined below."

### fn spec.forProvider.monitorConfig.withCustomHeaderMixin

```ts
withCustomHeaderMixin(customHeader)
```

"One or more custom_header blocks as defined below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.monitorConfig.withExpectedStatusCodeRanges

```ts
withExpectedStatusCodeRanges(expectedStatusCodeRanges)
```

"A list of status code ranges in the format of 100-101."

### fn spec.forProvider.monitorConfig.withExpectedStatusCodeRangesMixin

```ts
withExpectedStatusCodeRangesMixin(expectedStatusCodeRanges)
```

"A list of status code ranges in the format of 100-101."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.monitorConfig.withIntervalInSeconds

```ts
withIntervalInSeconds(intervalInSeconds)
```

"The interval used to check the endpoint health from a Traffic Manager probing agent. You can specify two values here: 30 (normal probing) and 10 (fast probing). The default value is 30."

### fn spec.forProvider.monitorConfig.withPath

```ts
withPath(path)
```

"The path used by the monitoring checks. Required when protocol is set to HTTP or HTTPS - cannot be set when protocol is set to TCP."

### fn spec.forProvider.monitorConfig.withPort

```ts
withPort(port)
```

"The port number used by the monitoring checks."

### fn spec.forProvider.monitorConfig.withProtocol

```ts
withProtocol(protocol)
```

"The protocol used by the monitoring checks, supported values are HTTP, HTTPS and TCP."

### fn spec.forProvider.monitorConfig.withTimeoutInSeconds

```ts
withTimeoutInSeconds(timeoutInSeconds)
```

"The amount of time the Traffic Manager probing agent should wait before considering that check a failure when a health check probe is sent to the endpoint. If interval_in_seconds is set to 30, then timeout_in_seconds can be between 5 and 10. The default value is 10. If interval_in_seconds is set to 10, then valid values are between 5 and 9 and timeout_in_seconds is required."

### fn spec.forProvider.monitorConfig.withToleratedNumberOfFailures

```ts
withToleratedNumberOfFailures(toleratedNumberOfFailures)
```

"The number of failures a Traffic Manager probing agent tolerates before marking that endpoint as unhealthy. Valid values are between 0 and 9. The default value is 3"

## obj spec.forProvider.monitorConfig.customHeader

"One or more custom_header blocks as defined below."

### fn spec.forProvider.monitorConfig.customHeader.withName

```ts
withName(name)
```

"The name of the Traffic Manager profile. Changing this forces a new resource to be created."

### fn spec.forProvider.monitorConfig.customHeader.withValue

```ts
withValue(value)
```

"The value of custom header. Applicable for HTTP and HTTPS protocol."

## obj spec.forProvider.resourceGroupNameRef

"Reference to a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.resourceGroupNameRef.policy

"Policies for referencing."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.resourceGroupNameSelector

"Selector for a ResourceGroup in azure to populate resourceGroupName."

### fn spec.forProvider.resourceGroupNameSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.resourceGroupNameSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.resourceGroupNameSelector.policy

"Policies for selection."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.resourceGroupNameSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withDnsConfig

```ts
withDnsConfig(dnsConfig)
```

"This block specifies the DNS configuration of the Profile. One dns_config block as defined below."

### fn spec.initProvider.withDnsConfigMixin

```ts
withDnsConfigMixin(dnsConfig)
```

"This block specifies the DNS configuration of the Profile. One dns_config block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withMaxReturn

```ts
withMaxReturn(maxReturn)
```

"The amount of endpoints to return for DNS queries to this Profile. Possible values range from 1 to 8."

### fn spec.initProvider.withMonitorConfig

```ts
withMonitorConfig(monitorConfig)
```

"This block specifies the Endpoint monitoring configuration for the Profile. One monitor_config block as defined below."

### fn spec.initProvider.withMonitorConfigMixin

```ts
withMonitorConfigMixin(monitorConfig)
```

"This block specifies the Endpoint monitoring configuration for the Profile. One monitor_config block as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withProfileStatus

```ts
withProfileStatus(profileStatus)
```

"The status of the profile, can be set to either Enabled or Disabled. Defaults to Enabled."

### fn spec.initProvider.withTags

```ts
withTags(tags)
```

"A mapping of tags to assign to the resource."

### fn spec.initProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"A mapping of tags to assign to the resource."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withTrafficRoutingMethod

```ts
withTrafficRoutingMethod(trafficRoutingMethod)
```

"Specifies the algorithm used to route traffic. Possible values are Geographic, Weighted, Performance, Priority, Subnet and MultiValue."

### fn spec.initProvider.withTrafficViewEnabled

```ts
withTrafficViewEnabled(trafficViewEnabled)
```

"Indicates whether Traffic View is enabled for the Traffic Manager profile."

## obj spec.initProvider.dnsConfig

"This block specifies the DNS configuration of the Profile. One dns_config block as defined below."

### fn spec.initProvider.dnsConfig.withRelativeName

```ts
withRelativeName(relativeName)
```

"The relative domain name, this is combined with the domain name used by Traffic Manager to form the FQDN which is exported as documented below. Changing this forces a new resource to be created."

### fn spec.initProvider.dnsConfig.withTtl

```ts
withTtl(ttl)
```

"The TTL value of the Profile used by Local DNS resolvers and clients."

## obj spec.initProvider.monitorConfig

"This block specifies the Endpoint monitoring configuration for the Profile. One monitor_config block as defined below."

### fn spec.initProvider.monitorConfig.withCustomHeader

```ts
withCustomHeader(customHeader)
```

"One or more custom_header blocks as defined below."

### fn spec.initProvider.monitorConfig.withCustomHeaderMixin

```ts
withCustomHeaderMixin(customHeader)
```

"One or more custom_header blocks as defined below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.monitorConfig.withExpectedStatusCodeRanges

```ts
withExpectedStatusCodeRanges(expectedStatusCodeRanges)
```

"A list of status code ranges in the format of 100-101."

### fn spec.initProvider.monitorConfig.withExpectedStatusCodeRangesMixin

```ts
withExpectedStatusCodeRangesMixin(expectedStatusCodeRanges)
```

"A list of status code ranges in the format of 100-101."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.monitorConfig.withIntervalInSeconds

```ts
withIntervalInSeconds(intervalInSeconds)
```

"The interval used to check the endpoint health from a Traffic Manager probing agent. You can specify two values here: 30 (normal probing) and 10 (fast probing). The default value is 30."

### fn spec.initProvider.monitorConfig.withPath

```ts
withPath(path)
```

"The path used by the monitoring checks. Required when protocol is set to HTTP or HTTPS - cannot be set when protocol is set to TCP."

### fn spec.initProvider.monitorConfig.withPort

```ts
withPort(port)
```

"The port number used by the monitoring checks."

### fn spec.initProvider.monitorConfig.withProtocol

```ts
withProtocol(protocol)
```

"The protocol used by the monitoring checks, supported values are HTTP, HTTPS and TCP."

### fn spec.initProvider.monitorConfig.withTimeoutInSeconds

```ts
withTimeoutInSeconds(timeoutInSeconds)
```

"The amount of time the Traffic Manager probing agent should wait before considering that check a failure when a health check probe is sent to the endpoint. If interval_in_seconds is set to 30, then timeout_in_seconds can be between 5 and 10. The default value is 10. If interval_in_seconds is set to 10, then valid values are between 5 and 9 and timeout_in_seconds is required."

### fn spec.initProvider.monitorConfig.withToleratedNumberOfFailures

```ts
withToleratedNumberOfFailures(toleratedNumberOfFailures)
```

"The number of failures a Traffic Manager probing agent tolerates before marking that endpoint as unhealthy. Valid values are between 0 and 9. The default value is 3"

## obj spec.initProvider.monitorConfig.customHeader

"One or more custom_header blocks as defined below."

### fn spec.initProvider.monitorConfig.customHeader.withName

```ts
withName(name)
```

"The name of the Traffic Manager profile. Changing this forces a new resource to be created."

### fn spec.initProvider.monitorConfig.customHeader.withValue

```ts
withValue(value)
```

"The value of custom header. Applicable for HTTP and HTTPS protocol."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."